# blender-python-scripts

./: README.md  pyproject.toml
scripts/: copy_model_with_new_name.py  normalize_all_models.py  restore.py  restore_models_in_folder.py  save_backups_of_models.py  test.py
scripts/basic_scripts/: load_next_model_in_folder.py  reset_environmental_variables.py
scripts/modificator_scripts/: save_current_changes.py
scripts/record_model_points/: load_next_model_in_folder.py  record_ground_model_points copy.py  record_upper_model_points.py  reset_environmental_variables.py  toggle_point_selections.py
scripts/shape_modification_scripts/: create_variation_of_tile.py
src/: GazeboModel.py  gazebo_model.py
src/blender_gazebo/: blender_functions.py  gazebo_blender_model.py  gazebo_model.py
